Fix nav bar covering content

--- a/styles/index.css
+++ b/styles/index.css
@@ -13,7 +13,7 @@ main {
   margin-left: auto;
   margin-right: auto;
   background-color: #f7f7f7;
-  padding: 1rem 0.5rem;
+  padding: 1rem 0.5rem 4rem 0.5rem;
   color: #0d0d0d;
 }
 
